--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "require": {
     "spryker/application": "^2.3.0",
     "spryker/kernel": "^2.0.0",
-    "spryker/elastica": "^2.0.0",
+    "spryker/elastica": "^2.0.0 || ^3.0.0",
     "spryker/propel": "^2.0.0",
     "spryker/redis": "^2.0.0",
     "spryker/symfony": "^2.0.0",
