--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "spryker/redis": "^2.0.0",
     "spryker/symfony": "^2.0.0"
   },
-  "description": "heartbeat bundle",
+  "description": "Heartbeat bundle",
   "license": "proprietary",
   "minimum-stability": "dev",
   "prefer-stable": true,
