--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     "spryker/kernel": "^2.0.0",
     "spryker/propel": "^2.0.0",
     "spryker/redis": "^2.0.0",
+    "spryker/session": "^2.0.0",
+    "spryker/storage": "^2.0.0",
     "spryker/symfony": "^2.0.0"
   },
   "description": "Heartbeat bundle",
