--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "php": ">=7.1",
     "spryker/application": "^3.4.0",
     "spryker/config": "^3.0.0",
-    "spryker/elastica": "^2.0.0 || ^3.0.0 || ^4.0.0",
+    "spryker/elastica": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0",
     "spryker/kernel": "^3.33.0",
     "spryker/propel-orm": "^1.0.0",
     "spryker/storage": "^3.8.0",
