--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,7 @@
         }
     },
     "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": false
-        }
+        "sort-packages": true
     },
     "abandoned": true
 }
